// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`a $ref inside example data is not a dependency > types.ts 1`] = `
"export type Child = {
        "name"?: string;
    };
export type Parent = {
        "child"?: Child;
    };
"
`;

exports[`a $ref inside example data is not a dependency > valibot.ts 1`] = `
"import * as v from "valibot";

export const inputChildSchema = v.looseObject(
    {
        "name": v.optional(v.string())
        ,
    });
export const childSchema = v.looseObject(
    {
        "name": v.exactOptional(v.pipe(v.string(), v.trim()))
        ,
    });
export const inputParentSchema = v.looseObject(
    {
        "child": v.optional(inputChildSchema)
        ,
    });
export const parentSchema = v.looseObject(
    {
        "child": v.exactOptional(childSchema)
        ,
    });
"
`;

exports[`a $ref into part of a schema inlines that subschema > types.ts 1`] = `
"export type Address = {
        "postcode"?: string;
    };
export type Parcel = {
        "to"?: string;
    };
"
`;

exports[`a $ref into part of a schema inlines that subschema > valibot.ts 1`] = `
"import * as v from "valibot";

export const inputAddressSchema = v.looseObject(
    {
        "postcode": v.optional(v.pipe(v.string(), v.regex(new RegExp("^[0-9]{4}$"))))
        ,
    });
export const addressSchema = v.looseObject(
    {
        "postcode": v.exactOptional(v.pipe(v.string(), v.regex(new RegExp("^[0-9]{4}$"))))
        ,
    });
export const inputParcelSchema = v.looseObject(
    {
        /**
         * Where the parcel goes
         */
        "to": v.optional(v.pipe(v.string(), v.regex(new RegExp("^[0-9]{4}$"))))
        ,
    });
export const parcelSchema = v.looseObject(
    {
        /**
         * Where the parcel goes
         */
        "to": v.exactOptional(v.pipe(v.string(), v.regex(new RegExp("^[0-9]{4}$"))))
        ,
    });
"
`;

exports[`a percent-encoded $ref finds its schema > types.ts 1`] = `
"export type PetKind = "cat" | "dog";
export type Pet = {
        "kind"?: PetKind;
    };
"
`;

exports[`a percent-encoded $ref finds its schema > valibot.ts 1`] = `
"import * as v from "valibot";

export const inputPetKindSchema = v.picklist(["cat", "dog"]);
export const petKindSchema = inputPetKindSchema;
export const inputPetSchema = v.looseObject(
    {
        "kind": v.optional(inputPetKindSchema)
        ,
    });
export const petSchema = v.looseObject(
    {
        "kind": v.exactOptional(petKindSchema)
        ,
    });
"
`;

exports[`a property named after a keyword still orders by its $ref > types.ts 1`] = `
"export type Preset = "low" | "high";
export type Settings = {
        "default"?: Preset;
        "example"?: Preset;
    };
"
`;

exports[`a property named after a keyword still orders by its $ref > valibot.ts 1`] = `
"import * as v from "valibot";

export const inputPresetSchema = v.picklist(["low", "high"]);
export const presetSchema = inputPresetSchema;
export const inputSettingsSchema = v.looseObject(
    {
        "default": v.optional(inputPresetSchema)
        ,
        "example": v.optional(inputPresetSchema)
        ,
    });
export const settingsSchema = v.looseObject(
    {
        "default": v.exactOptional(presetSchema)
        ,
        "example": v.exactOptional(presetSchema)
        ,
    });
"
`;

exports[`a schema name with a slash or tilde is found through its escaped $ref > types.ts 1`] = `
"export type PetTag = string;
export type PetKind = "cat" | "dog";
export type Pet = {
        "kind"?: PetKind;
        "tag"?: PetTag;
    };
"
`;

exports[`a schema name with a slash or tilde is found through its escaped $ref > valibot.ts 1`] = `
"import * as v from "valibot";

export const inputPetTagSchema = v.string();
export const petTagSchema = v.pipe(v.string(), v.trim());
export const inputPetKindSchema = v.picklist(["cat", "dog"]);
export const petKindSchema = inputPetKindSchema;
export const inputPetSchema = v.looseObject(
    {
        "kind": v.optional(inputPetKindSchema)
        ,
        "tag": v.optional(inputPetTagSchema)
        ,
    });
export const petSchema = v.looseObject(
    {
        "kind": v.exactOptional(petKindSchema)
        ,
        "tag": v.exactOptional(petTagSchema)
        ,
    });
"
`;

exports[`a schema that contains itself reads itself lazily > types.ts 1`] = `
"export type Category = {
        "name": string;
        "children"?: readonly (Category)[];
    };
"
`;

exports[`a schema that contains itself reads itself lazily > valibot.ts 1`] = `
"import * as v from "valibot";
import type { Category } from "./types.js";
import type { UndefinedOnPartialDeep } from "type-fest";

export const inputCategorySchema = v.looseObject(
    {
        "name": v.string()
        ,
        "children": v.optional(v.array(v.lazy((): v.GenericSchema<unknown, UndefinedOnPartialDeep<Category>> => inputCategorySchema)))
        ,
    });
export const categorySchema = v.looseObject(
    {
        "name": v.pipe(v.string(), v.trim())
        ,
        "children": v.exactOptional(v.array(v.lazy((): v.GenericSchema<unknown, Category> => categorySchema)))
        ,
    });
"
`;

exports[`schemas that refer to each other read the later one lazily > types.ts 1`] = `
"export type Post = {
        "author"?: Author;
        "words"?: bigint;
    };
export type Author = {
        "posts"?: readonly (Post)[];
    };
"
`;

exports[`schemas that refer to each other read the later one lazily > valibot.ts 1`] = `
"import * as v from "valibot";
import type { Author } from "./types.js";
import type { UndefinedOnPartialDeep } from "type-fest";

export const inputPostSchema = v.looseObject(
    {
        "author": v.optional(v.lazy((): v.GenericSchema<unknown, UndefinedOnPartialDeep<Author>> => inputAuthorSchema))
        ,
        "words": v.optional(v.bigint())
        ,
    });
export const postSchema = v.looseObject(
    {
        "author": v.exactOptional(v.lazy((): v.GenericSchema<unknown, Author> => authorSchema))
        ,
        "words": v.exactOptional(v.union([v.pipe(v.string(), v.decimal(), v.toBigint(), v.bigint()), v.pipe(v.number(), v.integer(), v.toBigint(), v.bigint()), v.bigint()]))
        ,
    });
export const inputAuthorSchema = v.looseObject(
    {
        "posts": v.optional(v.array(inputPostSchema))
        ,
    });
export const authorSchema = v.looseObject(
    {
        "posts": v.exactOptional(v.array(postSchema))
        ,
    });
"
`;
